// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterLink renders primary routerlink correctly 1`] = `
<a
  className="link link__primary"
  href="#"
  onClick={[Function]}
/>
`;

exports[`RouterLink renders secondary routerlink correctly 1`] = `
<a
  className="link link__secondary"
  href="#"
  onClick={[Function]}
/>
`;

exports[`RouterLink renders underline routerlink correctly 1`] = `
<a
  className="link link__underline"
  href="#"
  onClick={[Function]}
/>
`;
